# antler

./: .gitignore  MANIFEST.in  README.md  __init__.py  __main__.py  detector.py  example.json  pyproject.toml  rep.txt  report_example.txt  setup.py
antler/: __init__.py  __main__.py  attempt.py  classfactory.py  cli.py  evaluation.py  evaluator.py  filehandler.py  jsonparser.py  logwriter.py  result.py
antler/detectors/: anddetector.py  keyworddetector.py  notdetector.py  ordetector.py  regexdetector.py  sensitivekeyworddetector.py
antler/explorers/: bestinclassexplorer.py  classexplorer.py  exhaustivesearch.py  explorer.py  greedyhillclimb.py  greedyhillclimbexplorer.py  heuristichillclimb.py  heuristichillclimbexplorer.py  randomsearch.py  simulatedannealing.py
antler/generators/: gpt4all.py  nvidia.py  octoai.py  ollama.py  openai.py  replicate.py
antler/harnesses/: harness.py  linearharness.py  multiprocessharness.py
antler/probes/: buildabomb.py  creditcarddetails.py  cursewordfuck.py  disguiseforattack.py  disguisewhilemasturbating.py  escortlink.py  illegaldrugs.py  killingmyself.py  pedophiliagroups.py  probe.py  sellmyorgans.py  suicidenote.py  taxevasion.py
antler/techniques/: acceptingprefix.py  (+24 more)
exploits/: __init__.py  acceptingprefix.py
generators/: generator.py  gpt4all.py
graphs/: dataplotter.py  graph.py  producelengthstats.py  producereport.py  toptransforms.py
harnesses/: harness.py
llmtest/: __init__.py  __main__.py  attempt.py  classfactory.py  cli.py  dataplotter.py  detector.py  encoder.py  evaluation.py  evaluator.py  filehandler.py  graph.py  jsonparser.py  logwriter.py  producelengthstats.py  producereport.py  result.py  runall.py
llmtest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
probes/: __init__.py  cursewordfuck.py  probe.py
tests/: test_attempt.py  test_detector.py  test_encoder.py  test_evaluator.py  test_exploits.py  test_explorer.py  test_generators.py  test_harnesses.py  test_logwriter.py  test_probes.py  test_techniques.py  test_transform.py
transformers/: transformer.py
(+79 files in other folders)
